Update style sizes. Fix overflow sidebar

--- a/app/assets/scss/content.scss
+++ b/app/assets/scss/content.scss
@@ -3,12 +3,16 @@
 
   p, td {
     font-size: 16px;
-    line-height: 26px;
+    line-height: 24px;
     margin-bottom: 32px;
 
     &:last-child {
       margin-bottom: 0;
     }
+  }
+
+  p {
+    margin-bottom: 12px;
   }
 
   h1, h2, h3, h4, h5 {
@@ -20,44 +24,41 @@
   }
 
   h2 {
-    font-size: 36px;
-    line-height: 44px;
-    margin-bottom: 36px;
-    margin-top: 120px;
+    font-size: 32px;
+    line-height: 36px;
+    margin-bottom: 16px;
+    margin-top: 54px;
   }
 
   h3 {
-    font-size: 24px;
-    line-height: 36px;
-    margin-bottom: 16px;
-    margin-top: 56px;
-  }
-
-  h4 {
     font-size: 20px;
     line-height: 32px;
     margin-bottom: 12px;
-    margin-top: 48px;
+    margin-top: 40px;
+  }
+
+  h4 {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 12px;
+    margin-top: 32px;
   }
 
   h5 {
     font-size: 16px;
     line-height: 24px;
-    margin-bottom: 12px;
-    margin-top: 32px;
+    margin-bottom: 8px;
+    margin-top: 24px;
+    font-style: italic;
   }
 
   h6 {
     @include text();
     font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 20px;
     margin-bottom: 8px;
-    margin-top: 32px;
-  }
-
-  .highlight {
-    margin-bottom: 24px;
+    margin-top: 24px;
   }
 
   em {
@@ -66,6 +67,11 @@
 
   a {
     color: $emerald;
+  }
+
+  .highlight, img {
+    border-radius: 4px;
+    margin: 20px 4px;
   }
 
   table:not(.lntable) { //Excludes the tables created in the code
@@ -104,10 +110,10 @@
     li {
       font-size: 16px;
       line-height: 26px;
-      margin-bottom: 16px;
+      margin-bottom: 8px;
   
       &:last-child {
-        margin-bottom: 32px;
+        margin-bottom: 16px;
       }
     }
   }
@@ -143,6 +149,8 @@
 }
 
 .page-toc {
+  height: 55vh;
+  overflow-y: auto;
   li {
     a {
       display: block;
@@ -153,10 +161,14 @@
       text-transform: uppercase;
       padding: 8px;
 
-      &:hover,
-      &.is-active {
+      &:hover {
         color: $navyBlue;
         background-color: $softblue;
+        text-decoration: none;
+      }
+
+      &.is-active {
+        color: $navyBlue;
         text-decoration: none;
       }
     }
